# fast_api_sample

./: .gitignore  .pre-commit-config.yaml  main.py  models.py  pyproject.toml
